--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
-<!-- Emails use the XHTML Strict doctype -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" style="background: #1c1c1c; min-height: 100%;">
 
 <head>
-  <!-- The character set should be utf-8 -->
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <!-- Enables media queries -->
   <meta name="viewport" content="width=device-width">
-  <!-- Link to the email's CSS, which will be inlined into the email -->
   <style>
 @media only screen and (max-width:596px) {
   .small-float-center {
@@ -206,8 +202,24 @@
     display: none;
   }
   .text-p-education {
-    margin-bottom: 20px !important;
+    margin-bottom: 30px !important;
     font-size: 14px !important;
+  }
+}
+
+
+@media only screen and (max-width:500px) {
+  .text-p-education {
+    margin-bottom: 15px !important;
+    margin-top: 15px !important;
+  }
+}
+
+
+@media only screen and (max-width:375px) {
+  .text-p-education {
+    margin-bottom: 5px !important;
+    margin-top: 5px !important;
   }
 }
 </style>
@@ -242,29 +254,29 @@
               </th></tr></table></th>
               <th class="small-2 large-1 columns" style="Margin: 0 auto; color: #000; font-family: Arial,sans-serif; font-size: 14px; font-weight: 400; line-height: 19px; margin: 0 auto; padding: 0; padding-bottom: 0; padding-left: 8px; padding-right: 8px; text-align: left; width: 32.33333px;"><table style="border-collapse: collapse; border-spacing: 0; padding: 0; text-align: left; vertical-align: top; width: 100%;"><tr style="padding: 0; text-align: left; vertical-align: top;"><th style="Margin: 0; color: #000; font-family: Arial,sans-serif; font-size: 14px; font-weight: 400; line-height: 19px; margin: 0; padding: 0; text-align: left;"></th></tr></table></th>
               <th class="small-10 large-5 columns last" style="Margin: 0 auto; color: #000; font-family: Arial,sans-serif; font-size: 14px; font-weight: 400; line-height: 19px; margin: 0 auto; padding: 0; padding-bottom: 0; padding-left: 8px; padding-right: 16px; text-align: left; width: 225.66667px;"><table style="border-collapse: collapse; border-spacing: 0; padding: 0; text-align: left; vertical-align: top; width: 100%;"><tr style="padding: 0; text-align: left; vertical-align: top;"><th style="Margin: 0; color: #000; font-family: Arial,sans-serif; font-size: 14px; font-weight: 400; line-height: 19px; margin: 0; padding: 0; text-align: left;">
-                <p class="main-body-p text-bold span-text-data" style="Margin: 0; Margin-bottom: 10px; color: #ececec; font-family: Arial,sans-serif; font-size: 15px; font-weight: 700; line-height: 19px; margin: 0; margin-bottom: 5px; padding: 0; text-align: left;">
+                <p class="main-body-p text-bold span-text-data" style="Margin: 0; Margin-bottom: 10px; color: #ececec; font-family: Arial,sans-serif; font-size: 15px; font-weight: 700; line-height: 19px; margin: 0; margin-bottom: 5px; margin-top: 5px; padding: 0; text-align: left;">
                   <img class="img-skills img-data" src="https://lh4.googleusercontent.com/BOtvmNWOR4FLE6aNVO0dlmmmx7EgNB4Mqj5EywTwCn99A88djHWDRwOC7cY2_s-k0Mra-cyNrFVfsAQH42ClolIipij40SWChtrKPZtBYNEBrHHcaPEIfAujP59qILZ9UGHUemsh" alt="Happy Birthday" style="-ms-interpolation-mode: bicubic; background-color: #0f0; clear: both; display: inline-block !important; height: 20px !important; margin-right: 10px; max-width: 100%; outline: 0; text-decoration: none; width: auto;">4 November 1999
                 </p>
-                <p class="main-body-p text-bold span-text-data" style="Margin: 0; Margin-bottom: 10px; color: #ececec; font-family: Arial,sans-serif; font-size: 15px; font-weight: 700; line-height: 19px; margin: 0; margin-bottom: 5px; padding: 0; text-align: left;">
+                <p class="main-body-p text-bold span-text-data" style="Margin: 0; Margin-bottom: 10px; color: #ececec; font-family: Arial,sans-serif; font-size: 15px; font-weight: 700; line-height: 19px; margin: 0; margin-bottom: 5px; margin-top: 5px; padding: 0; text-align: left;">
                   <a class="basic-link data-text" href="https://goo.gl/maps/VFDUADusXZx" style="Margin: 0; color: #fff; font-family: Arial,sans-serif; font-weight: 700; line-height: 29.5px; margin: 0; padding: 0; text-align: left; text-decoration: underline;">
                     <img class="img-skills img-data" src="https://lh4.googleusercontent.com/86HgZ2uEQ-CXdy_Fx4JdSop3ZSLdPRAzUNXuMRJc8YpH2Ww54Y_gIXwFYwEcusKE7mwtQZYpRr5iHhTZs_cViL2S1VR2cxAjZpaOvg7EatT-jMnWzWrtLbhIdDcDnZnEpe4FXav6" alt="Location" style="-ms-interpolation-mode: bicubic; background-color: #0f0; border: 0; clear: both; display: inline-block !important; height: 20px !important; margin-right: 10px; max-width: 100%; outline: 0; text-decoration: none; width: auto;">Lodz, Poland</a>
                 </p>
-                <p class="main-body-p text-bold span-text-data" style="Margin: 0; Margin-bottom: 10px; color: #ececec; font-family: Arial,sans-serif; font-size: 15px; font-weight: 700; line-height: 19px; margin: 0; margin-bottom: 5px; padding: 0; text-align: left;">
+                <p class="main-body-p text-bold span-text-data" style="Margin: 0; Margin-bottom: 10px; color: #ececec; font-family: Arial,sans-serif; font-size: 15px; font-weight: 700; line-height: 19px; margin: 0; margin-bottom: 5px; margin-top: 5px; padding: 0; text-align: left;">
                   <img class="img-skills img-data" src="https://lh6.googleusercontent.com/VMEyqgtrH3IXTKDRAH4v1WNeazeo_xhi0yt7kothJ0RwExsHMIW62EUytDemZqwHW_p6D4qh4iwyf4McI7NQxpbj28EEkYNk89z7gnEtG2I8JdSzLOXTzH52lN3oj39h1lq18ySm" alt="Telephone" style="-ms-interpolation-mode: bicubic; background-color: #0f0; clear: both; display: inline-block !important; height: 20px !important; margin-right: 10px; max-width: 100%; outline: 0; text-decoration: none; width: auto;">+48 578 201 846
                 </p>
-                <p class="main-body-p text-bold span-text-data" style="Margin: 0; Margin-bottom: 10px; color: #ececec; font-family: Arial,sans-serif; font-size: 15px; font-weight: 700; line-height: 19px; margin: 0; margin-bottom: 5px; padding: 0; text-align: left;">
+                <p class="main-body-p text-bold span-text-data" style="Margin: 0; Margin-bottom: 10px; color: #ececec; font-family: Arial,sans-serif; font-size: 15px; font-weight: 700; line-height: 19px; margin: 0; margin-bottom: 5px; margin-top: 5px; padding: 0; text-align: left;">
                   <a class="basic-link data-text" href="mailto:gorbatiuk.ol@gmail.com" style="Margin: 0; color: #fff; font-family: Arial,sans-serif; font-weight: 700; line-height: 29.5px; margin: 0; padding: 0; text-align: left; text-decoration: underline;">
                     <img class="img-skills img-data" src="https://lh6.googleusercontent.com/Ndy-2IgKXYMA15_UAfFus_tXeKF4ALNc0nDKNo0cENErps1biFjcNfWGcHq_RbVUoHUjt_vRRn48myPYv6ak_jVQb0DmMXLE14zOs9lBq3h4VIRQrU5qY-u1MScYRRSCzbwj-tlU" alt="Email" style="-ms-interpolation-mode: bicubic; background-color: #0f0; border: 0; clear: both; display: inline-block !important; height: 20px !important; margin-right: 10px; max-width: 100%; outline: 0; text-decoration: none; width: auto;">gorbatiuk.ol@gmail.com</a>
                 </p>
-                <p class="main-body-p text-bold span-text-data" style="Margin: 0; Margin-bottom: 10px; color: #ececec; font-family: Arial,sans-serif; font-size: 15px; font-weight: 700; line-height: 19px; margin: 0; margin-bottom: 5px; padding: 0; text-align: left;">
+                <p class="main-body-p text-bold span-text-data" style="Margin: 0; Margin-bottom: 10px; color: #ececec; font-family: Arial,sans-serif; font-size: 15px; font-weight: 700; line-height: 19px; margin: 0; margin-bottom: 5px; margin-top: 5px; padding: 0; text-align: left;">
                   <a class="basic-link data-text" href="https://t.me/Aswis" style="Margin: 0; color: #fff; font-family: Arial,sans-serif; font-weight: 700; line-height: 29.5px; margin: 0; padding: 0; text-align: left; text-decoration: underline;">
                     <img class="img-skills img-data" src="https://lh3.googleusercontent.com/cf55CKOgKxSxaJaCoEvA9U5_NikvnFOWOvGdDTU2rJr3XwntCFpZ2fOP_RAY3T8BIE_IavFpa0J-RH1HcQAS1eF9bX7fycsglIuKnug7WO5vFsC4AbYDidJaqIiH3ESVn3MTDgdv" alt="Telegram" style="-ms-interpolation-mode: bicubic; background-color: #0f0; border: 0; clear: both; display: inline-block !important; height: 20px !important; margin-right: 10px; max-width: 100%; outline: 0; text-decoration: none; width: auto;">@Aswis</a>
                 </p>
-                <p class="main-body-p text-bold span-text-data" style="Margin: 0; Margin-bottom: 10px; color: #ececec; font-family: Arial,sans-serif; font-size: 15px; font-weight: 700; line-height: 19px; margin: 0; margin-bottom: 5px; padding: 0; text-align: left;">
+                <p class="main-body-p text-bold span-text-data" style="Margin: 0; Margin-bottom: 10px; color: #ececec; font-family: Arial,sans-serif; font-size: 15px; font-weight: 700; line-height: 19px; margin: 0; margin-bottom: 5px; margin-top: 5px; padding: 0; text-align: left;">
                   <a class="basic-link data-text" href="https://github.com/Aswiz" style="Margin: 0; color: #fff; font-family: Arial,sans-serif; font-weight: 700; line-height: 29.5px; margin: 0; padding: 0; text-align: left; text-decoration: underline;">
                     <img class="img-skills img-data" src="https://lh4.googleusercontent.com/iWNmU5RTjtiKINHZDJhVh3QC03RySPtW8SAdRA0GZQKyhCa-10WkhbuBlXuf5H_golYHAXgzTyk782AdwfwvLq9yq-TfxrAXewR0Ia3o7nd98Q9vnU2gIPjN8jgWlXaJEvYgPBlP" alt="Github" style="-ms-interpolation-mode: bicubic; background-color: #0f0; border: 0; clear: both; display: inline-block !important; height: 20px !important; margin-right: 10px; max-width: 100%; outline: 0; text-decoration: none; width: auto;">Aswiz</a>
                 </p>
-                <p class="main-body-p text-bold span-text-data" style="Margin: 0; Margin-bottom: 10px; color: #ececec; font-family: Arial,sans-serif; font-size: 15px; font-weight: 700; line-height: 19px; margin: 0; margin-bottom: 5px; padding: 0; text-align: left;">
+                <p class="main-body-p text-bold span-text-data" style="Margin: 0; Margin-bottom: 10px; color: #ececec; font-family: Arial,sans-serif; font-size: 15px; font-weight: 700; line-height: 19px; margin: 0; margin-bottom: 5px; margin-top: 5px; padding: 0; text-align: left;">
                   <a class="basic-link data-text" href="https://www.linkedin.com/in/oleg-gorbatiuk" style="Margin: 0; color: #fff; font-family: Arial,sans-serif; font-weight: 700; line-height: 29.5px; margin: 0; padding: 0; text-align: left; text-decoration: underline;">
                     <img class="img-skills img-data" src="https://lh3.googleusercontent.com/9Gqxduf8ZyAPJvhKpjrMNHXIYn8lAUIK3hFjDAk7kj4CVY0hzLrqntw3g7YVt2akgyQenKtOKFif8zNh6SdpNwRpUSkUTRaqgqcL9QnauziUbSNc9Dbd8IGP-hqONoTgOlyWfoBy" alt="Linkedin" style="-ms-interpolation-mode: bicubic; background-color: #0f0; border: 0; clear: both; display: inline-block !important; height: 20px !important; margin-right: 10px; max-width: 100%; outline: 0; text-decoration: none; width: auto;">oleg-gorbatiuk</a>
                 </p>
@@ -276,17 +288,23 @@
               <th class="small-12 large-12 columns first last" style="Margin: 0 auto; color: #000; font-family: Arial,sans-serif; font-size: 14px; font-weight: 400; line-height: 19px; margin: 0 auto; padding: 0; padding-bottom: 0; padding-left: 16px; padding-right: 16px; text-align: left; width: 564px;"><table style="border-collapse: collapse; border-spacing: 0; padding: 0; text-align: left; vertical-align: top; width: 100%;"><tr style="padding: 0; text-align: left; vertical-align: top;"><th style="Margin: 0; color: #000; font-family: Arial,sans-serif; font-size: 14px; font-weight: 400; line-height: 19px; margin: 0; padding: 0; text-align: left;">
                 <h3 class="main-heading text-center" style="Margin: 0; Margin-bottom: 0; color: #ececec; font-family: Arial,sans-serif; font-size: 22px; font-weight: 700; line-height: 1.3; margin: 0; margin-bottom: 0; padding: 0; text-align: center; text-transform: uppercase; word-wrap: normal;">Profile</h3>
                 <table class="spacer" style="border-collapse: collapse; border-spacing: 0; padding: 0; text-align: left; vertical-align: top; width: 100%;"><tbody><tr style="padding: 0; text-align: left; vertical-align: top;"><td height="10px" style="-moz-hyphens: auto; -webkit-hyphens: auto; Margin: 0; border-collapse: collapse !important; color: #000; font-family: Arial,sans-serif; font-size: 10px; font-weight: 400; hyphens: auto; line-height: 10px; margin: 0; padding: 0; text-align: left; vertical-align: top; word-wrap: break-word;">&#xA0;</td></tr></tbody></table> 
-                <p class="main-body-p" style="Margin: 0; Margin-bottom: 10px; color: #ececec; font-family: Arial,sans-serif; font-size: 15px; font-weight: 400; line-height: 19px; margin: 0; margin-bottom: 10px; padding: 0; text-align: left;">Beginner
-                  <span class="span-accent" style="color: #0f0; font-weight: 700;">Front-end</span> Developer seeking an internship in this direction. I am student of the University of Computer
-                  Science and Skills in Lodz at the Faculty of Information Technology. I can make templates of web pages
-                  in
-                  <span class="span-accent" style="color: #0f0; font-weight: 700;">Photoshop</span> and develop them using
+                <p class="main-body-p" style="Margin: 0; Margin-bottom: 10px; color: #ececec; font-family: Arial,sans-serif; font-size: 15px; font-weight: 400; line-height: 19px; margin: 0; margin-bottom: 10px; padding: 0; text-align: left;">
+                  Beginner
+                  <span class="span-accent" style="color: #0f0; font-weight: 700;">Front-end</span> Developer looking for a Junior position in this direction.
+                  <br>I am a student of the University of Computer Science and Skills in Lodz at the faculty of
+                  <span class="span-accent" style="color: #0f0; font-weight: 700;">I</span>nformation
+                  <span class="span-accent" style="color: #0f0; font-weight: 700;">T</span>echnology.
+                  <br>I can create web page templates in
+                  <span class="span-accent" style="color: #0f0; font-weight: 700;"></span>Photoshop and design them using
                   <span class="span-accent" style="color: #0f0; font-weight: 700;">HTML, CSS</span> and
-                  <span class="span-accent" style="color: #0f0; font-weight: 700;">JavaScript.</span> Also in my projects I use
-                  <span class="span-accent" style="color: #0f0; font-weight: 700;">SASS, jQuery, Gulp</span> and
-                  <span class="span-accent" style="color: #0f0; font-weight: 700;">Git.</span> I use
-                  <span class="span-accent" style="color: #0f0; font-weight: 700;">Linux</span> as my main operating system, but I'm also an Advanced
-                  <span class="span-accent" style="color: #0f0; font-weight: 700;">Windows</span> user. I want to continue to learn web development tools and learn how to test my code.</p>
+                  <span class="span-accent" style="color: #0f0; font-weight: 700;">JavaScript.</span>
+                  <br>I prefer
+                  <span class="span-accent" style="color: #0f0; font-weight: 700;">Linux</span> as my main operating system, but I'm also an advanced
+                  <span class="span-accent" style="color: #0f0; font-weight: 700;">Windows</span> user.
+                  <br> Currently I am studying
+                  <span class="span-accent" style="color: #0f0; font-weight: 700;">React / Redux</span> and
+                  <span class="span-accent" style="color: #0f0; font-weight: 700;">Node.js.</span>
+                </p>
                 <hr class="hr" style="Margin: 20px auto; border-bottom: 1px solid #cacaca; border-left: 0; border-right: 0; border-top: 0; clear: both; height: 0; margin: 12px auto; max-width: 580px;">
               </th>
 <th class="expander" style="Margin: 0; color: #000; font-family: Arial,sans-serif; font-size: 14px; font-weight: 400; line-height: 19px; margin: 0; padding: 0 !important; text-align: left; visibility: hidden; width: 0;"></th></tr></table></th>
@@ -418,7 +436,8 @@
                 </p>
                 <p class="main-body-p text-center" style="Margin: 0; Margin-bottom: 10px; color: #ececec; font-family: Arial,sans-serif; font-size: 15px; font-weight: 400; line-height: 19px; margin: 0; margin-bottom: 10px; padding: 0; text-align: center;">
                   made with
-                  <img class="img-love" src="https://lh4.googleusercontent.com/XsoOs9NwnmokhfUfiKVLFt2WzKICvU6e9dhIQAY7MsjMckhBOKAz8LsXcKT-VdDqWsopXASW3gvDv_uGKUNWBc2xbZ7b1wFFotqQmTQlzo7jevLfCwvpfKN0bCydAO6O7j31Bz_a" alt="love" style="-ms-interpolation-mode: bicubic; background-color: none; clear: both; display: inline-block !important; height: 10px !important; max-width: 100%; outline: 0; text-decoration: none; width: auto;"> by <a href="https://github.com/Aswiz" class="basic-link" style="Margin: 0; color: #ececec; font-family: Arial,sans-serif; font-weight: 400; line-height: 1.3; margin: 0; padding: 0; text-align: left; text-decoration: underline;"> Oleg Gorbatiuk</a>
+                  <img class="img-love" src="https://lh4.googleusercontent.com/XsoOs9NwnmokhfUfiKVLFt2WzKICvU6e9dhIQAY7MsjMckhBOKAz8LsXcKT-VdDqWsopXASW3gvDv_uGKUNWBc2xbZ7b1wFFotqQmTQlzo7jevLfCwvpfKN0bCydAO6O7j31Bz_a" alt="love" style="-ms-interpolation-mode: bicubic; background-color: none; clear: both; display: inline-block !important; height: 10px !important; max-width: 100%; outline: 0; text-decoration: none; width: auto;"> by
+                  <a href="https://github.com/Aswiz" class="basic-link" style="Margin: 0; color: #ececec; font-family: Arial,sans-serif; font-weight: 400; line-height: 1.3; margin: 0; padding: 0; text-align: left; text-decoration: underline;"> Oleg Gorbatiuk</a>
                 </p>
               </th>
 <th class="expander" style="Margin: 0; color: #000; font-family: Arial,sans-serif; font-size: 14px; font-weight: 400; line-height: 19px; margin: 0; padding: 0 !important; text-align: left; visibility: hidden; width: 0;"></th></tr></table></th>
