--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                   <span class="span-accent" style="color: #0f0; font-weight: 700;">I</span>nformation
                   <span class="span-accent" style="color: #0f0; font-weight: 700;">T</span>echnology.
                   <br>I can create web page templates in
-                  <span class="span-accent" style="color: #0f0; font-weight: 700;"></span>Photoshop and design them using
+                  <span class="span-accent" style="color: #0f0; font-weight: 700;">Photoshop</span> and design them using
                   <span class="span-accent" style="color: #0f0; font-weight: 700;">HTML, CSS</span> and
                   <span class="span-accent" style="color: #0f0; font-weight: 700;">JavaScript.</span>
                   <br>I prefer
